--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "scikit-learn-0.12.tar.gz:"	3c19274c5e03fc196d62e53d5826529ebdb7c0e9
+  scikit-learn-1.3.2.tar.gz: 0ca244c06d0563ba86ae6f1d6df1b16620811562
