--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   scikit-learn-1.4.0.tar.gz: f34b3149a07a2f671a3a546cf0a9b1c81dde1a86
+  scikit-learn-1.4.1.post1.tar.gz: 0846a8db57784059af877dd6166e5eb96035e0bb
